--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
 <!DOCTYPE = html>
+<html>
+  <head>
+    <title>Broadway Design</title>
+    <link href="Resources/CSS/style.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <!-- Header + Navigation Menu -->
+    <div>
+      <h1>Broadway Design</h1>
+      <nav>
+        <li>Home</li>
+        <li>About</li>
+        <li>Work</li>
+        <li>Team</li>
+        <li>Contact</li>
+      </nav>
+    </div>
+    <!-- Our Process Section -->
+    <div>
+      <h2>Our Process</h2>
+      <!-- Identify -->
+      <div>
+       <h3></h3>
+       <img src="">
+       <p></p>
+      </div>
+      <!-- Understand -->
+      <div>
+       <h3></h3>
+       <img src="">
+       <p></p>
+      </div>
+      <!-- Exectute -->
+      <div>
+       <h3></h3>
+       <img src="">
+       <p></p>
+      </div>
+    </div>
+    <!-- Sub Heading -->
+    <h3>Designed in New York</h3>
+    <!-- Footer -->
+    <div>
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>Email:</p>
+      <p>Twitter: </p>
+    </div>
+    </div>
+  </body>
+</html>
