--- a/index.html
+++ b/index.html
@@ -6,52 +6,69 @@
   </head>
   <body>
     <!-- Header + Navigation Menu -->
-    <div>
+    <div class="header">
       <h1>Broadway Design</h1>
+      <!-- Navigation Menu -->
       <nav>
-        <li>Home</li>
-        <li>About</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
+        <ul>
+          <h4><a href="">Home</a></h4>
+          <h4><a href="">About</a></h4>
+          <h4><a href="">Work</a></h4>
+          <h4><a href="">Team</a></h4>
+          <h4><a href="">Contact</a></h4>
+        </ul>
       </nav>
     </div>
     <!-- Our Process Section -->
-    <div>
+    <div class="process">
       <h2>Our Process</h2>
       <!-- Identify -->
       <div>
-       <h3></h3>
-       <img src="">
-       <p></p>
+       <h3>Identify</h3>
+       <p>We focus on the most important details.</p>
+       <img src="Resources/identify.svg">
       </div>
       <!-- Understand -->
       <div>
-       <h3></h3>
-       <img src="">
-       <p></p>
+       <h3>Understand</h3>
+       <p>We study our projects in and out.</p>
+       <img src="Resources/understand.svg">
       </div>
       <!-- Exectute -->
       <div>
-       <h3></h3>
-       <img src="">
-       <p></p>
+       <h3>Execute</h3>
+       <p>We put everything we have into our work.</p>
+       <img src="Resources/execute.svg">
       </div>
     </div>
     <!-- Sub Heading -->
-    <h3>Designed in New York</h3>
+    <div class="subheading">
+      <h3>Designed in New York</h3>
+    </div>
     <!-- Footer -->
     <div>
-      <h3>Portfolio</h3>
-      <p>Coming Soon</p>
-
-      <h3>Team</h3>
-      <p>We're Hiring!</p>
-
-      <h3>Contact</h3>
-      <p>Phone: (555)-555-5555</p>
-      <p>Email:</p>
-      <p>Twitter: </p>
+      <!-- Portfolio -->
+      <div>
+        <h3>Portfolio</h3>
+        <p>Coming Soon</p>
+      </div>
+      <!-- Team -->
+      <div>
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
+      </div>
+      <!-- Contact -->
+      <div class="contact">
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+        <p>Email: <a href="">test@example</a></p>
+        <p>Twitter: <a href="">@test</a></p>
+      </div>
+    </div>
+    <!-- Footer Nav + Copyright -->
+    <div class="footernav">
+      <p>&copy; Broadway 2016 <a href="">Home</a> <a href="">About</a> <a href="">Work</a>
+        <a href="">Team</a> <a href="">Contact</a></p>
     </div>
     </div>
   </body>
